# afrikalytics-ioa

./: .env.example  README.md
layer1/: collect.py  insights-tracker-sources.csv  ioa_dev.db  migrate_sources.py  pyproject.toml  schema.sql  sources.yaml
layer1/logs/: health_2026-03-05.md  health_2026-03-12.md
layer2/: countries.py  enrich.py  pyproject.toml
layer3/: pyproject.toml  synthesise.py
orchestration/: LAYER3_BRIEF_PROMPT.md  N8N_SETUP.md  n8n_workflow_cloud_trial.json  n8n_workflow_layer3_brief_agent.json  n8n_workflow_self_hosted.json  pyproject.toml  runner_api.py
