[project]
name = "ioa-layer3"
version = "0.1.0"
description = "IOA Intelligence Briefing — Layer 3 synthesis"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.99.0",
    "supabase>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.setuptools]
py-modules = []

# How to use:
# cd layer3
# uv sync
# uv run python synthesise.py --mode dev --period-days 7
